--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@google/genai": "^1.33.0",
     "lucide-react": "^0.561.0",
     "@vitejs/plugin-react": "^5.1.2",
-    "vite": "^7.2.7"
+    "vite": "^7.2.7",
+    "react-markdown": "9.0.1",
+    "jszip": "3.10.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
